--- a/styles/style_index.css
+++ b/styles/style_index.css
@@ -40,7 +40,7 @@ body {
 }
 
 .main-text h1 {
-    font-size: 3rem;
+    font-size: 3em;
 }
 
 .hide {
@@ -60,5 +60,4 @@ body {
     width: 100%;
     height: 100%;
     pointer-events: none;
-    /* z-index: -2;*/
 }
