--- a/styles/style_index.css
+++ b/styles/style_index.css
@@ -12,7 +12,7 @@ body {
 
 .content {
     min-height: 100vh;
-    background: linear-gradient(to left, rgba(23, 23, 23, 0.7), rgba(23, 23, 23, 0.3)), url("../images/front-page.png");
+    background: linear-gradient(to left, rgba(23, 23, 23, 0.8), rgba(23, 23, 23, 0.3)), url("../images/front-page.png");
     background-size: cover;
     padding: 0 5rem;
     z-index: -1;
@@ -33,26 +33,26 @@ body {
     transform: translateY(-5px);
 }
 
-.main-text {
+.content .main-text {
     position: absolute;
-    top: 40%;
+    top: 30%;
     left: 20%;
 }
 
-.main-text h1 {
-    font-size: 3em;
+.content .main-text h1 {
+    font-size: 2em;
 }
 
-.hide {
+.content .main-text .hide {
     overflow: hidden;
 }
 
-.view-site {
+.content .view-site {
     display: inline-block;
     transform: translateY(100%);
 }
 
-.slider {
+.anim .slider {
     background: rgb(23,23,23);
     position: fixed;
     top: 0;
@@ -60,4 +60,15 @@ body {
     width: 100%;
     height: 100%;
     pointer-events: none;
+}
+
+@media screen and (max-width: 500px){
+    .content .main-text {
+        font-size: 70%;
+        top: 15%;
+    }
+
+    .content a {
+        font-size: 1.2em;
+    }
 }
