--- a/styles/style_home.css
+++ b/styles/style_home.css
@@ -56,19 +56,6 @@ header {
     margin-top: -20px;
 }
 
-.title .left-sub {
-    position: absolute;
-    bottom: 10%;
-    margin-left: 20px;
-    background-color: red;
-}
-
-.title .right-sub {
-    position: absolute;
-    bottom: 2%;
-    margin-left: 20px;
-}
-
 header h2 {
     position: absolute;
     top: 50%;
@@ -82,12 +69,18 @@ header h2 {
     display: grid;
     margin: 50vh auto 0 auto;
     grid-template-columns: 1fr 1fr 1fr 1fr;
-    grid-gap: 30px;
+    grid-gap: 3%;
     max-height: 30%;
 }
 
 .image-container img{
     width: 100%;
     height: 100%;
+}
+
+@media screen and (max-width: 600px){
+    .container {
+        grid-template-columns: 1fr 1fr;
+    }
 }
 
