--- a/styles/style_home.css
+++ b/styles/style_home.css
@@ -16,7 +16,7 @@ body {
 
 header {
     position: absolute;
-    height: 40vh;
+    height: 230px;
     width: 90%;
     top: 5%;
     left: 5%;
@@ -31,7 +31,7 @@ header {
 }
 
 .title h1 {
-    font-size: 3em;
+    font-size: 3vw;
     padding: 0;
     margin: 0;
 }
@@ -45,6 +45,12 @@ header {
     margin-left: 30px;
 }
 
+.title-top {
+    cursor: pointer;
+    position: relative;
+    padding: 5px;
+}
+
 .title-sub {
     position: absolute;
     bottom: 10%;
@@ -56,31 +62,158 @@ header {
     margin-top: -20px;
 }
 
-header h2 {
-    position: absolute;
-    top: 50%;
-    left: 70%;
-    transform: translate(-70%, -50%);
-    font-size: 5em;
+header .head-title p {
+    font-size: 6vw;
+    padding: 0;
 }
 
-.container {
+header .head-title {
+    position: absolute;
+    top: 50%;
+    left: 80%;
+    transform: translate(-80%, -50%);
+    overflow: hidden;
+}
+
+.categories {
+    padding-bottom: 50px;
+}
+
+.container-black-white {
     max-width: 90%;
     display: grid;
-    margin: 50vh auto 0 auto;
-    grid-template-columns: 1fr 1fr 1fr 1fr;
+    margin: 300px auto 0 auto;
+    grid-template-columns: 1fr 1fr 1fr;
     grid-gap: 3%;
     max-height: 30%;
 }
 
-.image-container img{
+.container-color {
+    max-width: 90%;
+    display: grid;
+    margin: 50px auto 0 auto;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-gap: 3%;
+    max-height: 30%;
+}
+
+.categories img {
     width: 100%;
     height: 100%;
 }
 
-@media screen and (max-width: 600px){
+.image-container {
+    cursor: pointer;
+    position: relative;
+}
+
+.image-container p {
+    color: white;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    opacity: 0;
+    transition: opacity 1s ease;
+    font-size: 2vw;
+    z-index: 2;
+    text-align: center;
+}
+
+.image-container:hover > p {
+    opacity: 1;
+}
+
+
+.fade::after {
+    content: "";
+    background: black;
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    opacity: 0;
+    transition: opacity 0.5s ease;
+}
+
+.fade:hover::after {
+    opacity: 0.5;
+}
+
+footer {
+    width: 90%;
+    margin: 0 auto;
+    border-top: 2px solid rgba(54, 54, 54, 0.5);
+    padding: 20px 0;
+    color: rgba(54, 54, 54, 0.5);
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    position: relative;
+    font-size: 1.3em;
+}
+
+footer a {
+    color: rgba(54, 54, 54, 0.9);
+    text-decoration: none;
+}
+
+footer a:hover {
+    color: rgba(5, 5, 5, 1);
+}
+
+footer .link {
+    position: absolute;
+    left: 50%;
+    transform: translate(-50%, 0);
+    transition: transform 0.5s ease-out;
+}
+
+footer .link:hover {
+    transform: translate(-50%, -5px);
+}
+
+.anim .slider {
+    background: rgb(23, 23, 23);
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    pointer-events: none;
+}
+
+@media screen and (max-width: 700px) {
     .container {
         grid-template-columns: 1fr 1fr;
     }
+
+    .image-container p {
+        font-size: 3vw;
+    }
+
 }
 
+@media screen and (max-width: 900px) {
+    header h2 {
+        position: absolute;
+        top: 40%;
+        left: 70%;
+        transform: translate(-70%, -40%);
+    }
+
+    .title h1 {
+        font-size: 3vw;
+    }
+}
+
+@media screen and (max-width: 600px) {
+    header h2 {
+        font-size: 9vw;
+    }
+
+    .title h1 {
+        font-size: 5vw;
+    }
+}
