--- a/styles/style_home.css
+++ b/styles/style_home.css
@@ -40,6 +40,11 @@ header {
     padding: 10px 0 0 20px;
 }
 
+.title a {
+    color: white;
+    text-decoration: none;
+}
+
 .title .right {
     margin-top: -10px;
     margin-left: 30px;
