--- a/styles/style-cat.css
+++ b/styles/style-cat.css
@@ -37,7 +37,7 @@ header {
 
 .title h1 {
     font-size: 3vw;
-    padding: 0;
+    padding: 2px 0;
     margin: 0;
 }
 
@@ -53,7 +53,7 @@ header {
 .title-top {
     cursor: pointer;
     position: relative;
-    padding: 5px;
+    padding: 5px 0;
 }
 
 .title-sub {
@@ -100,7 +100,7 @@ header .head-title {
     height: 100%;
     object-fit: cover;
     transform: scale(1);
-    transition: transform 0.5s ease-out;
+    transition: transform 0.7s ease-out;
     cursor: pointer;
 }
 
@@ -117,7 +117,7 @@ header .head-title {
     height: 100%;
     opacity: 0;
     pointer-events: none;
-    transition: opacity 0.25s ease-out;
+    transition: opacity 0.8s ease-out;
     z-index: 2;
 }
 
@@ -133,11 +133,11 @@ header .head-title {
     max-width: 90vw;
     max-height: 85vh;
     transform: translate(-50%, -50%) scale(0.5);
-    transition: all 0.5s ease-out;
+    transition: all 1s ease-out;
 }
 
 .full-img.open {
-    transform: translate(-50%, -50%) scale(1);
+    transform: translate(-50%, -50%)scale(1);
 }
 
 .modal p {
@@ -159,8 +159,7 @@ footer {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    position: relative;
-    font-size: 1.3em;
+    font-size: 1.3rem;
 }
 
 footer a {
@@ -173,14 +172,13 @@ footer a:hover {
 }
 
 footer .link {
-    position: absolute;
-    left: 50%;
-    transform: translate(-50%, 0);
+    justify-self: center;
+    /*transform: translate(-50%, 0);*/
     transition: transform 0.5s ease-out;
 }
 
 footer .link:hover {
-    transform: translate(-50%, -5px);
+    transform: translateY(-5px);
 }
 
 .anim .slider {
@@ -200,6 +198,18 @@ footer .link:hover {
 
     .image-container p {
         font-size: 3vw;
+    }
+
+    footer {
+        font-size: 1rem;
+    }
+
+    header .head-title p {
+        font-size: 9vw;
+    }
+
+    header .title-sub p {
+        font-size: 1.3em;
     }
 
 }
