--- a/styles/style_home.css
+++ b/styles/style_home.css
@@ -32,7 +32,7 @@ header {
 
 .title h1 {
     font-size: 3vw;
-    padding: 0;
+    padding: 3px 0;
     margin: 0;
 }
 
@@ -53,14 +53,17 @@ header {
 .title-top {
     cursor: pointer;
     position: relative;
-    padding: 5px;
+    padding: 5px 0;
 }
 
 .title-sub {
     position: absolute;
     bottom: 10%;
     margin-left: 30px;
+    margin-right: 20px;
     text-align: right;
+    display: inline-block;
+
 }
 
 .title p {
@@ -81,13 +84,13 @@ header .head-title {
 }
 
 .categories {
-    padding-bottom: 50px;
+    padding-bottom: 70px;
 }
 
 .container-black-white {
     max-width: 90%;
     display: grid;
-    margin: 300px auto 0 auto;
+    margin: 300px auto 70px auto;
     grid-template-columns: 1fr 1fr 1fr;
     grid-gap: 3%;
     max-height: 30%;
@@ -96,7 +99,7 @@ header .head-title {
 .container-color {
     max-width: 90%;
     display: grid;
-    margin: 50px auto 0 auto;
+    margin: 0 auto 0 auto;
     grid-template-columns: 1fr 1fr 1fr;
     grid-gap: 3%;
     max-height: 30%;
@@ -155,8 +158,7 @@ footer {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    position: relative;
-    font-size: 1.3em;
+    font-size: 1.3rem;
 }
 
 footer a {
@@ -169,14 +171,13 @@ footer a:hover {
 }
 
 footer .link {
-    position: absolute;
-    left: 50%;
-    transform: translate(-50%, 0);
+    justify-self: center;
+    /*transform: translate(-50%, 0);*/
     transition: transform 0.5s ease-out;
 }
 
 footer .link:hover {
-    transform: translate(-50%, -5px);
+    transform: translateY(-5px);
 }
 
 .anim .slider {
@@ -198,6 +199,16 @@ footer .link:hover {
         font-size: 3vw;
     }
 
+    footer {
+        font-size: 1rem;
+    }
+
+}
+
+@media screen and (max-width: 1000px){
+    .container-black-white, .container-color {
+        grid-template-columns: 1fr 1fr;
+    }
 }
 
 @media screen and (max-width: 900px) {
@@ -211,6 +222,8 @@ footer .link:hover {
     .title h1 {
         font-size: 3vw;
     }
+
+
 }
 
 @media screen and (max-width: 600px) {
@@ -220,5 +233,18 @@ footer .link:hover {
 
     .title h1 {
         font-size: 5vw;
+    }
+
+    .container-black-white {
+        grid-template-columns: 1fr;
+        margin: 300px auto 140px auto;
+    }
+
+    .container-color {
+        grid-template-columns: 1fr;
+    }
+
+    .title p {
+        font-size: 14px;
     }
 }
